--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     <section id="education">
         <h2>Education</h2>
         <ul>
-            <li><strong>M.Tech. (CSE)</strong> - Indian Institute of Technology, Kanpur (CGPA: 9) <br> <span>2024-Present</span></li>
+            <li><strong>M.Tech. (CSE)</strong> - Indian Institute of Technology, Kanpur (CGPA: 8.85) <br> <span>2024-Present</span></li>
             <li><strong>B.Tech. (CSE)</strong> - RCOEM, Nagpur (CGPA: 9) <br> <span>2019-2023</span></li>
         </ul>
     </section>
@@ -205,12 +205,30 @@
         <div class="skills-list">
             <span>Python</span><span>C/C++</span><span>Bash</span><span>Go</span><span>Docker</span>
             <span>Kubernetes</span><span>AWS</span><span>Postgres</span><span>Git</span><span>Helm</span>
+            <span>CUDA</span><span>Nvidia-Driver</span>
         </div>
     </section>
 
     <section id="projects">
         <h2>Projects</h2>
         <div class="projects-grid">
+            <div class="project-card">
+                <h3>Gideon</h3>
+                <p>The project investigates CRIUgpu, a plugin-based extension for CRIU that leverages NVIDIA’s driver-level features to capture and restore GPU state efficiently.</p>
+                <a class="project-link" href="https://github.com/jatin-jangir/Gideon" target="_blank" aria-label="GitHub">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M12 2a10 10 0 00-3.16 19.49c.5.09.68-.22.68-.48v-1.7c-2.78.61-3.37-1.34-3.37-1.34-.45-1.15-1.11-1.46-1.11-1.46-.91-.63.07-.62.07-.62 1 .07 1.54 1 1.54 1 .89 1.52 2.34 1.08 2.91.83a2.07 2.07 0 01.62-1.31c-2.22-.25-4.56-1.11-4.56-4.94a3.87 3.87 0 011-2.68 3.59 3.59 0 01.1-2.64s.84-.27 2.75 1a9.52 9.52 0 015 0c1.91-1.28 2.75-1 2.75-1a3.59 3.59 0 01.1 2.64 3.87 3.87 0 011 2.68c0 3.83-2.34 4.69-4.57 4.94a2.33 2.33 0 01.67 1.8v2.67c0 .26.18.57.69.48A10 10 0 0012 2z" />
+                    </svg>
+                </a>
+                <div class="project-skills-list">
+                    <span>C</span>
+                    <span>Cuda</span>
+                    <span>Nvidia-Driver</span>
+                    <span>Linux</span>
+                    <span>Criu</span>
+                    <span>Containers</span>
+                </div>
+            </div>
             <div class="project-card">
                 <h3>Logminder</h3>
                 <p>Monitors Kubernetes logs for errors and provides insights.</p>
@@ -226,6 +244,35 @@
                     <span>Docker</span>
                     <span>MiniO</span>
                     <span>ML/AI</span>
+                </div>
+            </div>
+            <div class="project-card">
+                <h3>Drax</h3>
+                <p></p>
+                <a class="project-link" href="https://github.com/jatin-jangir/Drax" target="_blank" aria-label="GitHub">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M12 2a10 10 0 00-3.16 19.49c.5.09.68-.22.68-.48v-1.7c-2.78.61-3.37-1.34-3.37-1.34-.45-1.15-1.11-1.46-1.11-1.46-.91-.63.07-.62.07-.62 1 .07 1.54 1 1.54 1 .89 1.52 2.34 1.08 2.91.83a2.07 2.07 0 01.62-1.31c-2.22-.25-4.56-1.11-4.56-4.94a3.87 3.87 0 011-2.68 3.59 3.59 0 01.1-2.64s.84-.27 2.75 1a9.52 9.52 0 015 0c1.91-1.28 2.75-1 2.75-1a3.59 3.59 0 01.1 2.64 3.87 3.87 0 011 2.68c0 3.83-2.34 4.69-4.57 4.94a2.33 2.33 0 01.67 1.8v2.67c0 .26.18.57.69.48A10 10 0 0012 2z" />
+                    </svg>
+                </a>
+                <div class="project-skills-list">
+                    <span>react-js</span>
+                    <span>Go</span>
+                    <span>Prometheus</span>
+                    <span>alert manager</span>
+                    <span>Kubernetes</span>
+                </div>
+            </div>
+            <div class="project-card">
+                <h3>Miss-Minutes</h3>
+                <p>Money management game that have AI compititor.</p>
+                <a class="project-link" href="https://github.com/jatin-jangir/Miss-Minutes" target="_blank" aria-label="GitHub">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M12 2a10 10 0 00-3.16 19.49c.5.09.68-.22.68-.48v-1.7c-2.78.61-3.37-1.34-3.37-1.34-.45-1.15-1.11-1.46-1.11-1.46-.91-.63.07-.62.07-.62 1 .07 1.54 1 1.54 1 .89 1.52 2.34 1.08 2.91.83a2.07 2.07 0 01.62-1.31c-2.22-.25-4.56-1.11-4.56-4.94a3.87 3.87 0 011-2.68 3.59 3.59 0 01.1-2.64s.84-.27 2.75 1a9.52 9.52 0 015 0c1.91-1.28 2.75-1 2.75-1a3.59 3.59 0 01.1 2.64 3.87 3.87 0 011 2.68c0 3.83-2.34 4.69-4.57 4.94a2.33 2.33 0 01.67 1.8v2.67c0 .26.18.57.69.48A10 10 0 0012 2z" />
+                    </svg>
+                </a>
+                <div class="project-skills-list">
+                    <span>react-js</span>
+                    <span>Python</span>
                 </div>
             </div>
             <div class="project-card">
