--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
             </div>
             <div class="project-card">
                 <h3>Drax</h3>
-                <p></p>
+                <p>Dashboard for pipelining alerts for better monitoring.</p>
                 <a class="project-link" href="https://github.com/jatin-jangir/Drax" target="_blank" aria-label="GitHub">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
                         <path d="M12 2a10 10 0 00-3.16 19.49c.5.09.68-.22.68-.48v-1.7c-2.78.61-3.37-1.34-3.37-1.34-.45-1.15-1.11-1.46-1.11-1.46-.91-.63.07-.62.07-.62 1 .07 1.54 1 1.54 1 .89 1.52 2.34 1.08 2.91.83a2.07 2.07 0 01.62-1.31c-2.22-.25-4.56-1.11-4.56-4.94a3.87 3.87 0 011-2.68 3.59 3.59 0 01.1-2.64s.84-.27 2.75 1a9.52 9.52 0 015 0c1.91-1.28 2.75-1 2.75-1a3.59 3.59 0 01.1 2.64 3.87 3.87 0 011 2.68c0 3.83-2.34 4.69-4.57 4.94a2.33 2.33 0 01.67 1.8v2.67c0 .26.18.57.69.48A10 10 0 0012 2z" />
@@ -287,6 +287,20 @@
                     <span>Kubernetes</span>
                     <span>Go-Lang</span>
                     <span>Docker</span>
+                </div>
+            </div>
+            <div class="project-card">
+                <h3>CS771-Mini-project</h3>
+                <p> Linear classifier for Multilevel MUX. </p>
+                <a class="project-link" href="https://github.com/jatin-jangir/CS771-Mini-project" target="_blank" aria-label="GitHub">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M12 2a10 10 0 00-3.16 19.49c.5.09.68-.22.68-.48v-1.7c-2.78.61-3.37-1.34-3.37-1.34-.45-1.15-1.11-1.46-1.11-1.46-.91-.63.07-.62.07-.62 1 .07 1.54 1 1.54 1 .89 1.52 2.34 1.08 2.91.83a2.07 2.07 0 01.62-1.31c-2.22-.25-4.56-1.11-4.56-4.94a3.87 3.87 0 011-2.68 3.59 3.59 0 01.1-2.64s.84-.27 2.75 1a9.52 9.52 0 015 0c1.91-1.28 2.75-1 2.75-1a3.59 3.59 0 01.1 2.64 3.87 3.87 0 011 2.68c0 3.83-2.34 4.69-4.57 4.94a2.33 2.33 0 01.67 1.8v2.67c0 .26.18.57.69.48A10 10 0 0012 2z" />
+                    </svg>
+                </a>
+                <div class="project-skills-list">
+                    <span>Python</span>
+                    <span>sklearn</span>
+                    <span>Maths</span>
                 </div>
             </div>
             <div class="project-card">
